--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,77 +1,30 @@
-name: Build Android
-on: workflow_dispatch
-
+name: Build APK
+on: [push]
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
-
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.19.0'
-
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
           pip install "flet==0.24.1"
-
       - name: Build APK
         run: |
           flet build apk --verbose
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
-        with:
-          name: RadioApp-APK
-          path: build/apk/**/*.apkname: Build Android
-on: workflow_dispatch
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.19.0'
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install "flet==0.24.1"
-
-      - name: Build APK
-        run: |
-          flet build apk --verbose
-
       - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
